--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.mustache.check-template-location = false
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 # PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://localhost:5432/vaadinstart
-spring.datasource.username = vaadinstart
-spring.datasource.password = vaadinstart
+spring.datasource.url = jdbc:postgresql://192.168.1.155:9090/testvaadin
+spring.datasource.username = postgres
+spring.datasource.password = rednavedb2015
 spring.jpa.hibernate.ddl-auto = update
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
